# sdc-int-cc-ui

./: .development.env  .flake8  .gitignore  Dockerfile  Makefile  Pipfile  README.md  application.py  cloudbuild.yaml  requirements.txt  run.sh  setup.cfg  setup.py
app/: __init__.py  access.py  info.py  jinja_filters.py  logging.py  routes.py  settings.py  setup.py  user_auth.py  user_context.py  utils.py
app/address_search/: __init__.py  routes.py
app/admin/: routes.py
app/backend/: __init__.py  ccsvc.py
app/case/: __init__.py  routes.py
app/config/: base.py  dev.py  prod.py  test.py
app/errors/: handlers.py
app/routes/: admin.py  case.py  errors.py  sel.py  structural.py  to.py
app/sel/: __init__.py  routes.py
app/templates/: base-wide.html  base.html  case.html  error.html  home.html  postcode-results.html  uprn-list.html
app/to/: __init__.py  routes.py
app/utilities/: case.py  json.py
kubernetes/: dev.yml
saml/: settings-https.json  settings.json
saml-dev/: settings.json
saml/dev/: settings.json
saml/dev-onelogin/: settings.json
saml/local/: settings-azure.json  settings.json
scripts/: load_templates.sh  local-idp.sh
scripts/simplesaml-config/: README.md  saml20-idp-hosted.php  users.php
templates/: base-wide.html  base.html  home.html
templates/admin/: add-or-update-user.html  add-user.html  create-user.html  delete-user.html  home.html  remove-user.html  update-user.html  user-list.html  user-removed.html
templates/case/: add-note.html  case.html  (+12 more)
tests/: set_up_test_case.py  test_errors.py  test_sel.py  test_utils.py
(+60 files in other folders)
