[metadata]
name = cc_ui
version = 0.0.1
author = ONSDigital
description = ONS Contact Centre - UI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ONSdigital/sdc-int-cc-ui
project_urls =
    Bug Tracker = https://github.com/ONSdigital/sdc-int-cc-ui/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = app
packages = find:
python_requires = >=3.8

[options.packages.find]
where = app